# PocVpaHpa

./: Dockerfile  README.md  api-deployment.yaml  api-service.yaml  docker-compose.yaml  hpa.yaml  load_test.py  main.py  vpa.yaml
app/: Dockerfile  main.py  (+2 more)
back_poc_loki/bill-service/: .env.template  Dockerfile  README.md  docker-compose.yml  pyproject.toml
back_poc_loki/bill-service/app/core/application/factories/: builder_Transaction_service.py
back_poc_loki/bill-service/app/core/application/ports/: Transaction_adapter_port.py
back_poc_loki/bill-service/app/infrastructure/adapters/: Transaction_adapter_service.py  healthcheck_adapter.py
back_poc_loki/bill-service/app/infrastructure/api/: main.py
back_poc_loki/bill-service/app/infrastructure/api/routers/: Bill_repository_router.py  Transaction_adapter_router.py  dependencies.py
back_poc_loki/bill-service/app/infrastructure/api/schemas/: Bill_schema.py  healthcheck_schema.py
back_poc_loki/bill-service/app/infrastructure/config/: settings.py
back_poc_loki/bill-service/app/infrastructure/database/: session.py
back_poc_loki/bill-service/app/infrastructure/database/models/: Bill_model.py
back_poc_loki/bill-service/app/infrastructure/database/repositories/: Bill_repository.py
back_poc_loki/bill-service/app/infrastructure/http/: http_client.py
back_poc_loki/bill-service/test/unit/application/entities/: base_entity_test.py
back_poc_loki/bill-service/test/unit/application/factories/: builder_Transaction_service_test.py
back_poc_loki/bill-service/test/unit/services/: Bill_repository_service_test.py
(+190 files in other folders)
